cmps104a/asg3/test/94-syntax.str
stringset[   1]:    3930163824820145617: 0x158b688->"static"
stringset[   3]:   11868120863286193964: 0x158b7e8->"main"
stringset[   4]:      21606623943142546: 0x158b458->"{"
stringset[   6]:    1124216861911730172: 0x158b728->"[]"
                   13686721134187162920: 0x158b978->"}"
stringset[   7]:   14032891358763643253: 0x15908b8->"System"
stringset[  12]:   15816506932648033945: 0x158b018->"("
stringset[  13]:   15099569138734304119: 0x1590958->"."
stringset[  18]:    7563291569981072216: 0x1590578->"String"
stringset[  21]:    8968846175329310707: 0x158fda8->"f"
stringset[  22]:   11119863584837490933: 0x158b928->"(255);"
                    9631199822919835226: 0x15902f8->"foo"
stringset[  23]:    2164777474661572977: 0x158b838->"(String[]"
                   12868445110721718657: 0x1590078->")"
stringset[  25]:    5725406308350100246: 0x158b888->"args)"
                    4993892634952068459: 0x158b4a8->"a"
stringset[  28]:   14635384904416252381: 0x158b598->"return"
stringset[  32]:   11597697714117577063: 0x158b4f8->"="
stringset[  33]:    2944347139180516444: 0x158b5e8->"foo;"
stringset[  34]:    8194355264956552874: 0x1590ae8->"255"
stringset[  36]:   11752052362951903271: 0x158b638->"public"
                    4717813016573902940: 0x158b408->"f()"
stringset[  38]:   12597418120160561823: 0x158b3b8->"int"
stringset[  39]:   13572014848115611548: 0x158b8d8->"System.exit"
stringset[  40]:   11911796782241914524: 0x158b798->"void"
stringset[  41]:    6895825537633130899: 0x158b748->"args"
stringset[  42]:    5344662657899890615: 0x158b548->";"
stringset[  44]:   16711936661946036647: 0x15909f8->"exit"
stringset[  45]:     515652794354703053: 0x158b368->"k"
load_factor = 0.617
bucket_count = 47
max_bucket_size = 2
